<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFCP2PRSADemo</string>
    <string name="title_activity_beam_reader">BeamReaderActivity</string>  
    <string name="title_activity_beam_writer">BeamWriterActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_beam_reader">Receiving Message</string>
    <string name="title_fragment_beam_writer">Beaming Message</string>    
    <string name="action_settings">Settings</string>  
    <string name="action_save">Save</string>

    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="content">Content</string>
    <string name="bring_the_two_devices_together">Bring the two devices together</string>
    <string name="beaming_message">Beaming Message</string>
    <string name="receiving_message">Receiving Message</string>
    <string name="please_generate_your_key">Please generate your key.</string>
    <string name="plaintext_empty">The plain text is empty.</string>
    <string name="ciphertext_empty">The cipher text is empty.</string>
    <string name="encrypted_secret_key_empty">The encrypted secret key is empty.</string>       
    <string name="cancel">Cancel</string>   
    
    <string name="pref_category_rsa">RSA</string>
    <string name="pref_public_key">Public Key</string>
    <string name="pref_private_key">Private Key</string>
    <string name="pref_category_aes">AES</string>
    <string name="pref_secret_key">Secret Key</string>
   
    <string name="default_public_key">MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCs8WHGqtb/6Q/aCi5qPiOf5PzLnyNpkNlj9b8N2d6F/H4y4RZVLL6z/o6HOLJMPNOhnsCtZIKigKeTkhDL5KkQMv0u0HullPIVHe/tmeULF0//S8hJGXFrC9FvNRKM2K37InevYn99kqd71W4pXYQd1lcYNwjAbcQKzSgID58DgQIDAQAB</string>
    <string name="default_private_key">MIICdwIBADANBgkqhkiG9w0BAQEFAASCAmEwggJdAgEAAoGBAKzxYcaq1v/pD9oKLmo+I5/k/MufI2mQ2WP1vw3Z3oX8fjLhFlUsvrP+joc4skw806GewK1kgqKAp5OSEMvkqRAy/S7Qe6WU8hUd7+2Z5QsXT/9LyEkZcWsL0W81EozYrfsid69if32Sp3vVbildhB3WVxg3CMBtxArNKAgPnwOBAgMBAAECgYA4AoEBH4k8HlYU7qEzpWZSPY4lwCdu5AuT1R4INVxdFnYkskNSWIh2sOWmI5WTHUwJFuod/eRVDse3AmJQNoEOBg6zP+LkofBmtVSZXYYJCMb8H/XwzCfMXlF8f8kA9e1CeecRnu4dQJSQHyn96frKYoaDq3jfCMSVZ583Do4XAQJBAOhgfPDoQ+lz2OMfVGnqHNM7oJz3B/rGi2AIFZSZzP52+Wb2XaeEqmPuLMScfq0soRKeE3CbYZOAs7JB4TNYyNECQQC+hiYNYfLBtaMH79EKpVNH+aGZbpilqW6emvb5gHKTqn0FQ+KP1wNMa78eNKPyarVmfZD/1Q4SGWOfRpwGtDuxAkEAsi8SfvPK518Chx3F77UpxztorBOsVboas1dfnOPWUaVPFomBROuwcBH42AYcCJQ5Knp185nh12YP5HcpxOKmkQJBAKxqYg1CUpmScpNAJ4Dm1FMSSXe8ak+g4QaPXmm0H/waEUGuiV16SvXhm/cN1EAQ6VBy2cFrYWxnpYwCLjiy6kECQEZF+iGAb+/j0aSyOoaTyl3VwrcfevQ910gRI8eFuA/i6h/xk3UbTULVzU4ZDk/TrI19UituGKh1yHRoyyHB2ZY=</string>
	<string name="click_to_show_public_key">Click to show public key</string>
	<string name="click_to_show_private_key">Click to show private key</string>
    
    <string name="plain_text">Plain text</string>
    <string name="cipher_text">Cipher text</string>
    <string name="plain_text_hint">Please enter the plain text</string>
    <string name="encrypted_secret_key">Encrypted Secret Key</string>   
    <string name="secret_key">Secret Key</string>
    <string name="encrypt_plain_text">Encrypt plain text with secert key</string>
    <string name="encrypt_secret_key">Encrypt secret key with public key</string>
    <string name="decrypt_secret_key">Decrypt secret key with private key</string>
    <string name="decrypt_cipher_text">Decrypt cipher text with secret key</string>
    <string name="generate_key">Generate a new key?</string>
    <string name="your_settings_have_been_saved">Your settings have been saved.</string>    
    
    <string name="androidApplication">Android Application</string>
    <string name="androidApplicationPackageName">Package name</string>
    <string name="absoluteURI">Absolute URI</string>
    <string name="action">Action</string>
    <string name="actionAction">Action</string>
    <string name="alternativeCarrier">Alternative Carrier</string>
    <string name="alternativeCarrierCarrierPowerState">Carrier power state</string>
    <string name="alternativeCarrierCarrierDataReference">Carrier data reference</string>
    <string name="alternativeCarrierAuxiliaryDataReferences">Auxiliary data references</string>
    <string name="empty">Empty</string>
    <string name="reserved">Reserved</string>
    <string name="unchanged">Unchanged</string>
    <string name="external">External</string>
    <string name="domain">Domain</string>
    <string name="type">Type</string>
    <string name="data">Data</string>
    <string name="dataSize">%d bytes</string>
    <string name="genericControl">Generic Control</string>
    <string name="genericControlConfigurationByte">Configuration byte</string>
    <string name="genericControlTarget">Target</string>
    <string name="genericControlAction">Action</string>
    <string name="genericControlData">Data</string>
    <string name="genericControlDataRecords">%d data records</string>
    <string name="handoverCarrier">Handover Carrier</string>
    <string name="handoverCarrierCarrierTypeFormat">Carrier type format</string>
    <string name="handoverCarrierCarrierType">Carrier type</string>
    <string name="handoverCarrierCarrierData">Carrier data</string>
    <string name="handoverCarrierCarrierDataValue">%d bytes</string>
    <string name="handoverRequest">Handover Request</string>
    <string name="handoverRequestMajorVersion">Major version</string>
    <string name="handoverRequestMinorVersion">Minor version</string>
    <string name="handoverRequestCollisionResolution">Collision resolution</string>
    <string name="handoverRequestAlternativeCarriers">Alternative carriers</string>
    <string name="handoverSelect">Handover Select</string>
    <string name="handoverSelectMajorVersion">Major version</string>
    <string name="handoverSelectMinorVersion">Minor version</string>
    <string name="handoverSelectAlternativeCarriers">Alternative carriers</string>
    <string name="handoverSelectError">Error</string>
    <string name="mimemedia">Mimemedia</string>
    <string name="mimemediaMimetype">Mimetype</string>
    <string name="mimemediaSize">Payload size</string>
    <string name="smartPoster">Smart Poster</string>
    <string name="smartPosterTitle">Title</string>
    <string name="smartPosterAction">Action</string>
    <string name="smartPosterURI">URI</string>
    <string name="text">Text</string>
    <string name="textMessage">Message</string>
    <string name="textEncoding">Encoding</string>
    <string name="textLocale">Locale</string>
    <string name="unknown">Unknown</string>
    <string name="uri">URI</string>
    <string name="wellknownURI">Well-known URI</string>
    <string name="nfcAvailableEnabled">NFC available and enabled.</string>
    <string name="nfcAvailableDisabled">NFC available but disabled.</string>
    <string name="nfcBeamAvailableEnabled">Beam enabled.</string>
    <string name="nfcBeamAvailableDisabled">Beam disabled.</string>
    <string name="nfcBeamed">Message beamed.</string>
    <string name="noNfcMessage">NFC is not available.</string>
    <string name="tagNotWritable">Tag is not writable.</string>
    <string name="ndefWriteFailed">Write tag failed: %s</string>
    <string name="ndefWriteSuccess">Write tag successful.</string>
    <string name="nfcSettingEnabled">NFC enabled in settings.</string>
    <string name="nfcSettingDisabled">NFC disabled in settings.</string>
    <string name="ndefUnformattedWriteFailed">Write unformatted tag failed.</string>
    <string name="ndefFormattedWriteFailed">Write formatted failed.</string>
    <string name="readEmptyMessage">Read empty message.</string>
    <string name="readNonNDEFMessage">Read non-NDEF message.</string>
    <string name="readUnparsableNDEFMessage">Read NDEF message but was unable to parse.</string>
    <string name="readSingleRecordNDEFMessage">Read single-record NDEF message.</string>
    <string name="readMultipleRecordNDEFMessage">Read multi-record NDEF message.</string>
    <string name="wroteUnformattedTag">Wrote unfromatted tag.</string>
    <string name="wroteFormattedTag">Wrote formatted tag.</string>
    <string name="cannotWriteTechMessage">Cannot write tech or unformatted tag.</string>
    <string name="tagTooSmallMessage">Message size %1$d bytes exceeds tag capacity of %2$d bytes.</string>

</resources>