<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/handoverSelect"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverSelectMajorVersion" />

            <TextView
                android:id="@+id/handoverSelectMajorVersionValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverSelectMinorVersion" />

            <TextView
                android:id="@+id/handoverSelectMinorVersionValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverSelectAlternativeCarriers" />

            <TextView
                android:id="@+id/handoverSelectAlternativeCarriersValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverSelectError" />

            <TextView
                android:id="@+id/handoverSelectErrorValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

</LinearLayout>