<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/handoverRequest"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestMajorVersion" />

            <TextView
                android:id="@+id/handoverRequestMajorVersionValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestMinorVersion" />

            <TextView
                android:id="@+id/handoverRequestMinorVersionValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestCollisionResolution" />

            <TextView
                android:id="@+id/handoverRequestCollisionResolutionValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestAlternativeCarriers" />

            <TextView
                android:id="@+id/handoverRequestAlternativeCarriersValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

</LinearLayout>