<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/external"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/domain" />

            <TextView
                android:id="@+id/domainValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/type" />

            <TextView
                android:id="@+id/typeValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/data" />

            <TextView
                android:id="@+id/dataValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

</LinearLayout>