<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/genericControl"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/genericControlConfigurationByte" />

            <TextView
                android:id="@+id/genericControlConfigurationByteValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:id="@+id/genericControlTargetRow" >

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/genericControlTarget" />

            <TextView
                android:id="@+id/genericControlTargetValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:id="@+id/genericControlActionRow" >

            <TextView
                android:id="@+id/smartPosterTitleDescriptor"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/genericControlAction" />

            <TextView
                android:id="@+id/genericControlActionValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:id="@+id/genericControlDataRow" >

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/genericControlData" />

            <TextView
                android:id="@+id/genericControlDataValue"
                android:gravity="left"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

</LinearLayout>