<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/plain_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:orientation="horizontal"
                android:padding="5dip" >

                <EditText
                    android:id="@+id/editTextPlaintext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/plain_text_hint"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/buttonEncryptPlaintext"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/encrypt_plain_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/cipher_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:orientation="vertical"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textViewCiphertext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonEncryptSecretKey"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/encrypt_secret_key"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/encrypted_secret_key"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:orientation="vertical"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textViewEncryptedSecretKey"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/buttonBeam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/beaming_message"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>