<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/content"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:minHeight="50dip"
                android:orientation="vertical"
                android:padding="5dip" >

                <ListView
                    android:id="@+id/listViewContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="@android:color/transparent"
                    android:orientation="horizontal" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/encrypted_secret_key"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textViewEncryptedSecretKey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dip" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonDecryptEncryptedSecretKey"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/decrypt_secret_key"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/secret_key"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textViewSecretKey"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/cipher_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textViewCiphertext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonDecryptCiphertext"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/decrypt_cipher_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/plain_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textViewPlaintext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/buttonBeam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/receiving_message"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>